# ixado-todo

./: .gitignore  APP_PLAN.md  LICENSE  PR_READINESS.md  README.md  index.html  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
public/: index.html
src/: main.mjs  server.ts
src/game/: Game.mjs  config.mjs  logic.mjs
test/: app-plan.test.js  game-logic.test.js
tests/: api.test.ts  test_todos.py
