[project]
name = "ixado-todo"
version = "0.1.0"
description = "Minimal FastAPI TODO service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
